# JanganMales.AI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup_data.py  simulate_janganmales.py  test_sql_agent.py
agent/: consultant_agent.py  supervisor_agent.py
dataset/: cleaned_jobs.csv  jobs.csv  processed_jobs.json  sql_jobs.db
google-cloud-sdk/.install/: bq-nix.snapshot.json  bq.snapshot.json  core-nix.snapshot.json  core.snapshot.json  gcloud-crc32c-darwin-arm.snapshot.json  gcloud-crc32c.snapshot.json  gcloud-deps.snapshot.json  gcloud.snapshot.json  gsutil-nix.snapshot.json  gsutil.snapshot.json
google-cloud-sdk/lib/googlecloudsdk/command_lib/run/integrations/: flags.py
script/: chunking_database.py  prep_sql.py  upload_database.py
src/agent/: consultant_agent.py  rag_agent.py  sql_agent.py  state.py  supervisor_agent.py
src/api/: main.py
src/frontend/: app.py
src/tools/: consultant_tools.py  rag_tools.py  sql_tools.py
